# timelock-program-authority

./: Anchor.toml  Cargo.toml  README.md
program/src/: error.rs  lib.rs  state.rs
program/src/processor/: immutable_upgrade.rs  initialize.rs  mod.rs  program_upgrade.rs  timelock_duration.rs
program/tests/: lib.rs  test.rs  transactions.rs  utils.rs
programs/timelock-program-authority/: Cargo.toml
programs/timelock-program-authority/src/: lib.rs
programs/timelock-program-authority/src/processor/: mod.rs
