[package]
name = "timelock-program-authority"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "timelock_program_authority"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
test = []

[dependencies]
anchor-lang = "0.26.0"
bincode = "1.3.2"

[dev-dependencies]
solana-program-test = "1.14.11"
solana-program-runtime = "1.14.11"
solana-bpf-loader-program = "1.14.11"
solana-sdk = "1.14.11"
tokio = { version = "1.8.4", features = ["full"] }